k8s/base/service.yaml
# Copyright (c) Magnon Compute Corporation. All rights reserved.
apiVersion: v1
kind: Service
metadata:
  name: flink-kubernetes-operator
  namespace: flink-operator
  labels:
    app: flink-kubernetes-operator
    app.kubernetes.io/name: flink-kubernetes-operator
    app.kubernetes.io/part-of: magnon-platform
    magnon.io/project: substrate
spec:
  selector:
    app: flink-kubernetes-operator
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
      protocol: TCP
    - name: health
      port: 8085
      targetPort: health
      protocol: TCP
  type: ClusterIP
