k8s/base/ciliumnetworkpolicy.yaml
# Copyright (c) Magnon Compute Corporation. All rights reserved.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flink-operator-allow
  namespace: flink-operator
  labels:
    app: flink-kubernetes-operator
    app.kubernetes.io/part-of: magnon-platform
    magnon.io/project: substrate
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: prometheus
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
  - toFQDNs:
    - matchPattern: "*.cluster.local"
    - matchPattern: "*.svc"
  - toPorts:
    - ports:
      - port: "443"
        protocol: TCP
